src/test/resources/LO-2/InvalidPrograms/test_25.lo
// Missing block in foo

int foo() {
    String a, b;

}

int main() {
    {
        return foo();
    }
}